# 0D-Reactor

./: CMakeLists.txt
data/: Keq-gupta-1990.xml  N2-park-90-rates.xml  air11-park-90-rates.xml  air11-park-93-rates.xml  air5-gupta-rates.xml  air5-park-90-rates.xml  park-90-rates.xml  species-data.xml
files/: 0DReactor.csv
headers/: XMLreader.h  chemistry.h  common.h  commonConstants.h  commonMath.h  common_functions.h  dataStructures.h  energy.h  reader.h
includes/common/: commonConstants.h  commonPhysics.h
includes/physics/: chemistry.h  dataStructures.h  energy.h
includes/xml/: XMLreader.h  reader.h
python/: energy.py  energy2.py  plot_0D.py  plot_2sp.py  plot_5sp.py
source-terms/: chemistry.h
src/: 2species.cpp  5species.cpp  main.cpp  test.cpp
